--- a/manifest.json
+++ b/manifest.json
@@ -1,18 +1,18 @@
 {
-  "id": "dev.replugged.ThemeTemplate",
-  "name": "Theme Template",
-  "description": "A theme template",
+  "id": "dev.replugged.Amoled",
+  "name": "Amoledcord for Replugged",
+  "description": "A Super Dark Discord theme",
   "author": {
-    "name": "replugged",
-    "discordID": "1000992611840049192",
-    "github": "replugged-org"
+    "name": "JJ",
+    "discordID": "176721924448059402",
+    "github": "JJ-VP"
   },
-  "version": "1.0.2",
+  "version": "1.0.0",
   "updater": {
     "type": "github",
-    "id": "replugged-org/theme-template"
+    "id": "jj-vp/amoled-replugged"
   },
   "license": "MIT",
   "type": "replugged-theme",
-  "main": "src/main.css"
+  "main": "src/_index.scss"
 }
