asar name change
Name change + version bump

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "id": "dev.replugged.Amoled",
+  "id": "dev.JJ.Amoled",
   "name": "Amoledcord for Replugged",
   "description": "A Super Dark Discord theme",
   "author": {
